Version 0.7.2
------------------------------------------------------------------------------
New functions:
* `svy()` to compute robust standard errors for weighted models, adjusting the residual degrees of freedom to simulate sampling weights.

Changes to functions:
* `prop()` no longer works within dplyr's `summarise()` function. Instead, when now used with grouped data frames, a summary of proportions is directly returned as tibble.


Version 0.7.1
------------------------------------------------------------------------------
General:
* Package depends on R-version >= 3.3.

Changes to functions:
* `prop()` gets a `digits`-argument to round the return value to a specific number of decimal places.

Version 0.7.0
------------------------------------------------------------------------------
General:
* Largely revised the documentation.

New functions:
* `prop()` to calculate proportion of values in a vector.
* `mse()` to calculate the mean square error for models.
* `robust()` to calculate robust standard errors and confidence intervals for regression models, returned as tidy data frame.

Version 0.6.0
------------------------------------------------------------------------------
New functions:
* `split_half()` to compute the split-half-reliability of tests or questionnaires.
* `sd_pop()` and `var_pop()` to compute population variance and population standard deviation.

Changes to functions:
* `se()` now also computes the standard error from estimates (regression coefficients) and p-values.

Version 0.5.0
------------------------------------------------------------------------------
New functions:
* Added S3-`print`-method for `mwu()`-function.
* `get_model_pval()` to return a tidy data frame (tibble) of model term names, p-values and standard errors from various regression model types.
* `se_ybar()` to compute standard error of sample mean for mixed models, considering the effect of clustering on the standard error.