@@ -11,6 +11,7 @@ S3method(print,sj_mwu)
 S3method(print,sj_resample)
 S3method(print,sj_splithalf)
 S3method(print,sjstats_r2)
+S3method(print,sjstats_zcf)
 export(boot_ci)
 export(boot_p)
 export(boot_se)
@@ -61,6 +62,7 @@ export(weight)
 export(weight2)
 export(wtd_sd)
 export(wtd_se)
+export(zero_count)
 importFrom(MASS,loglm)
 importFrom(Matrix,solve)
 importFrom(coin,pvalue)
@@ -99,6 +101,7 @@ importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,deviance)
 importFrom(stats,df.residual)
+importFrom(stats,dpois)
 importFrom(stats,family)
 importFrom(stats,fitted)
 importFrom(stats,formula)
