@@ -2,6 +2,7 @@ Version 0.7.2
 ------------------------------------------------------------------------------
 New functions:
 * `svy()` to compute robust standard errors for weighted models, adjusting the residual degrees of freedom to simulate sampling weights.
+* `zero_count()` to check whether a poisson-model is over- or underfitting zero-counts in the outcome.
 
 Changes to functions:
 * `prop()` no longer works within dplyr's `summarise()` function. Instead, when now used with grouped data frames, a summary of proportions is directly returned as tibble.
